<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/linearlayout"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/et_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/et_school_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_school"
            android:drawablePadding="5dp"
            android:hint="@string/school"
            android:inputType="text"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/view_login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"/>

</RelativeLayout>